--- a/littlelemon/src/Components/Hero.css
+++ b/littlelemon/src/Components/Hero.css
@@ -53,14 +53,25 @@ text-align:left
     .Reserve-btn
     {
     width: 250px;
-    height: 50px;
+    height: 60px;
     flex-shrink: 0;
     border-radius: 25px;
     background: #F4CE14;
-    color: #FFF;
+    color: #240a0a;
     font-family: Markazi Text;
-    font-size:large;
+    font-size:larger;
     font-style:normal;
     font-weight:900;
+    }
+    .Reserve-btn > LinkR{
+        text-decoration: none;
+        list-style-type: none;
+        color: rgb(24, 8, 8);
+    text-align: center;
+    padding: 16px;
+    background: #F4CE14;
+    margin:50%;
+    text-decoration: none;
+    vertical-align: middle;
     }
     
